logo overlap fix

--- a/app/scss/module/_logo.scss
+++ b/app/scss/module/_logo.scss
@@ -57,11 +57,7 @@
   overflow: hidden;
   text-indent: -3000px;
   text-decoration: none;
-  position: absolute;
-  bottom: 10px;
-  left: 50%;
-  margin-left: -73px;
-  z-index: 1;
+  margin: 40px auto 10px auto;;
 }
 
 
